2005-02-27  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/20101
	* gfortran.dg/write_0_pe_format.f90: New test.

2005-02-27  Tobias Schl"uter  <tobias.schlueter@physik.uni-muenchen.de>

	* gfortran.dg/e_d_fmt.f90: New test.

2005-02-27  Jakub Jelinek  <jakub@redhat.com>

	PR c++/20206
	* g++.dg/opt/thunk2.C: New test.
	* g++.dg/opt/covariant1.C: New test.

2005-02-27  Andrew Pinski  <pinskia@physics.uc.edu>

	* gcc.dg/tree-ssa/inline_asm-2.c: link_error produces
	a V_MAY_DEF also.

2005-02-26  Andrew Pinski  <pinskia@physics.uc.edu>

	PR tree-opt/20188
	* gcc.dg/tree-ssa/inline_asm-1.c: New test.
	* gcc.dg/tree-ssa/inline_asm-2.c: New test.
	* gcc.dg/asm-b.c: New test.

2005-02-26  Richard Sandiford  <rsandifo@redhat.com>

	* gcc.c-torture/execute/ieee/mul-subnormal-single-1.x: New file.
	Disable this test on IRIX 6.

2005-02-25  Diego Novillo  <dnovillo@redhat.com>

	PR tree-optimization/20204
	* testsuite/gcc.dg/pr20204.c: New test.

2005-02-24  Jakub Jelinek  <jakub@redhat.com>

	PR target/20196
	* gcc.c-torture/execute/20050224-1.c: New test.

	PR c++/20175
	* g++.dg/warn/Wbraces2.C: New test.

2005-02-23  Mark Mitchell  <mark@codesourcery.com>

	PR c++/19878
	* g++.dg/init/const2.C: New test.

2005-02-23  Hans-Peter Nilsson  <hp@axis.com>

	PR tree-optimization/20100
	* gcc.c-torture/execute/pr20100-1.c: New test.

2005-02-23  Tobias Schl"uter  <tobias.schlueter@physik.uni-muenchen.de>

	* gfortran.dg/implicit_3.f90: New test.

	* gfortran.dg/deftype_1.f90: New test.

2005-02-23  Alexandre Oliva  <aoliva@redhat.com>

	* g++.dg/lookup/anon2.C: Don't let access checks make it look like
	the test passes.
	* g++.dg/other/anon3.C: Accept a warning.

2005-02-23  Kazu Hirata  <kazu@cs.umass.edu>

	* gcc.dg/pr20017.c: Fix a comment typo.

2005-02-23  Bud Davis  <bdavis@gfortran.org>

	* gfortran.dg/list_read_4.f90: Change to f90 comments.

2005-02-23  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR ada/19902
	* ada/acats/tests/cxa/cxa3004.a: Remove.